# taskflow-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
config/: urls.py
config/settings/: __init__.py  base.py
tasks/: models.py  serializers.py  tests.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_task_type.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
